--- a/Jenkinsfile.template
+++ b/Jenkinsfile.template
@@ -1,7 +1,7 @@
 pipeline {
     agent { 
         node {
-            label 'aldrinastronomo/pythonhello:latest'
+            label 'devopsjourney1/myjenkinsagents'
             }
       }
     stages {
